service_nodedoc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-docker
  labels:
    app: node-docker-service
    
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: nodedoc
