destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: node-destination
spec:
  host: node-docker
  subsets:
  - name: v1
    labels:
      release: v1
