istiogateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nodedocker-gateway
  namespace: chaos
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-docker
  namespace: chaos
spec:
  hosts:
  - "*"
  gateways:
  - nodedocker-gateway
  http:
  - match:
    - uri:
        exact: /test
    route:
    - destination:
        host: node-docker
        port:
          number: 8000
