istiogateway_retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-docker
  namespace: chaos
spec:
  hosts:
  - "*"
  gateways:
  - nodedocker-gateway
  http:
  - route:
    - destination:
        host: node-docker.chaos.svc.cluster.local
        subset: v1
        port:
          number: 8000
    retries:
      attempts: 10
      perTryTimeout: 2s
      retryOn: 5xx
